<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.theleafapps.pro.MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/music_logo_padding"
            android:contentDescription="@string/image_view_description"
            android:src="@drawable/music_logo" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin_end"
            android:layout_marginStart="@dimen/button_margin_start"
            android:text="@string/play_button_text" />

        <Button
            android:id="@+id/pause_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin_end"
            android:layout_marginStart="@dimen/button_margin_start"
            android:background="@color/colorAccent"
            android:text="@string/pause_button_text" />

        <Button
            android:id="@+id/volume_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin_end"
            android:layout_marginStart="@dimen/button_margin_start"
            android:text="@string/volume_up_button_text" />

        <Button
            android:id="@+id/volume_down_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin_end"
            android:layout_marginStart="@dimen/button_margin_start"
            android:background="@color/colorAccent"
            android:text="@string/volume_down_button_text" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin_end"
            android:layout_marginStart="@dimen/button_margin_start"
            android:text="@string/stop_button_text" />

    </LinearLayout>
</ScrollView>
